---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var r : real\nvar i : int\nvar n : nat\n\nvar _e00 : boolean := 1\nvar _e01 : boolean := i\nvar _e02 : boolean := n\nvar _e03 : boolean := r\n"
---
"r"@(FileId(1), 4..5) [ConstVar(Var, No)]: real
"i"@(FileId(1), 17..18) [ConstVar(Var, No)]: int
"n"@(FileId(1), 29..30) [ConstVar(Var, No)]: nat
"_e00"@(FileId(1), 42..46) [ConstVar(Var, No)]: boolean
"_e01"@(FileId(1), 66..70) [ConstVar(Var, No)]: boolean
"_e02"@(FileId(1), 90..94) [ConstVar(Var, No)]: boolean
"_e03"@(FileId(1), 114..118) [ConstVar(Var, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 60..61): mismatched types
| note for (FileId(1), 60..61): this is of type `{integer}`
| note for (FileId(1), 49..56): this is of type `boolean`
| info: `{integer}` is not assignable into `boolean`
error at (FileId(1), 84..85): mismatched types
| note for (FileId(1), 84..85): this is of type `int`
| note for (FileId(1), 73..80): this is of type `boolean`
| info: `int` is not assignable into `boolean`
error at (FileId(1), 108..109): mismatched types
| note for (FileId(1), 108..109): this is of type `nat`
| note for (FileId(1), 97..104): this is of type `boolean`
| info: `nat` is not assignable into `boolean`
error at (FileId(1), 132..133): mismatched types
| note for (FileId(1), 132..133): this is of type `real`
| note for (FileId(1), 121..128): this is of type `boolean`
| info: `real` is not assignable into `boolean`
